--- a/views/shop.html
+++ b/views/shop.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product List</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/product.css">
 </head>
 <body>
     <header class="main-header">
@@ -18,6 +19,7 @@
 
     <main>
         <h1> My Products </h1>
+        <p>List of all the products.</p>
     </main>
 </body>
 </html>
